<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_nav_size">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:background="@mipmap/foto_head_bg">

                <RelativeLayout
                    android:id="@+id/rl_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/big_spacing">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_head"
                        android:layout_width="@dimen/head_size"
                        android:layout_height="@dimen/head_size"
                        android:src="@drawable/head_default"
                        app:civ_border_color="@color/border"
                        app:civ_border_width="2dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/medium_spacing"
                        android:layout_toRightOf="@id/civ_head"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username_default"
                            android:textColor="@color/white"
                            android:textSize="@dimen/medium_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="15715769421"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sub_medium_text" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="@dimen/arrow_size"
                        android:layout_height="@dimen/arrow_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_edit" />
                </RelativeLayout>
            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/small_spacing">

                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_my_work" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="@string/my_work"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="2"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/medium_text"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/small_spacing">

                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_report" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="@string/my_report"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="11"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/medium_text"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_item"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/small_spacing">

                        <ImageView
                            android:layout_width="@dimen/item_icon_size"
                            android:layout_height="@dimen/item_icon_size"
                            app:srcCompat="@drawable/ic_award" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="@string/my_award"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sub_medium_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/s_small_spacing"
                            android:text="1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/medium_text"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.yzspp.sewage.widget.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:content="@string/no_message"
                        app:icon="@drawable/ic_message"
                        app:name="@string/message"
                        app:showContent="true" />

                    <com.yzspp.sewage.widget.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_service"
                        app:name="@string/service" />

                    <com.yzspp.sewage.widget.CardItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_feedback"
                        app:name="@string/feedback" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.yzspp.sewage.widget.CardItem
                        android:id="@+id/ci_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_about"
                        app:name="@string/about_app"
                        app:showHint="true" />

                    <com.yzspp.sewage.widget.CardItem
                        android:id="@+id/ci_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_update"
                        app:name="@string/check_update"
                        app:showHint="true" />

                    <com.yzspp.sewage.widget.CardItem
                        android:id="@+id/ci_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_thumb_up"
                        app:name="@string/score" />


                    <com.yzspp.sewage.widget.CardItem
                        android:id="@+id/si_share_friend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_share_firend"
                        app:name="@string/share_firend" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
